fixed tooltip and clipping

--- a/src/style/_map.scss
+++ b/src/style/_map.scss
@@ -117,7 +117,7 @@
 		background-color: #454545;
 	}
 
-	.map-tooltip:hover .map-tooltip-content{
+	.map-program:hover .map-tooltip-content{
 		visibility: visible;
 	}
 
